--- a/lesson18/package.json
+++ b/lesson18/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "expo": "~54.0.31",
+    "expo-status-bar": "~3.0.9",
+    "express": "^5.2.1",
+    "mysql2": "^3.16.1",
+    "react": "19.1.0",
+    "react-native": "0.81.5"
   },
   "private": true,
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mysql2": "^3.16.1"
-  }
+  "description": ""
 }
-
-
